# STORM-Research-Assistant

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  vercel.json
docs/: API_INTEGRATION.md
frontend/: .env.example  .env.local.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/briefs/: page.tsx
frontend/app/geo/: page.tsx
frontend/app/results/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/slides/: page.tsx
frontend/app/slideshow/: page.tsx
frontend/app/studio/: page.tsx
frontend/components/: content-brief-form.tsx
frontend/components/dashboard/: index.ts  quick-actions.tsx  recent-briefs.tsx  stats-grid.tsx  system-status.tsx
frontend/components/generation/: index.ts  (+1 more)
frontend/hooks/: index.ts  use-generation-stream.ts
frontend/stores/: app-store.ts  brief-store.ts  generation-store.ts  index.ts  ui-store.ts
frontend/types/: api.ts
plans/: mad-ez-media-storm-architecture.md
scripts/: setup.sh
storm-api/: .env.example  .env.vercel  .gitignore  CLAUDE.md  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  vercel.json
storm-api/api/: index.py  requirements.txt
storm-api/app/: __init__.py  analysis.py  generation.py  geo.py  geo_pipeline.py  image_generation.py  llm.py  research.py  search.py  seo.py  slideshow_generator.py  video_generator.py
storm-api/migrations/: __init__.py  env.py
storm-api/migrations/versions/: 001_initial_schema.py  002_geo_tables.py  __init__.py
(+13 files in other folders)
