[project]
name = "storm-api"
version = "0.1.0"
description = "STORM-based content generation API for Mad EZ Media / SonicBrand AI"
authors = [
    { name = "Mad EZ Media", email = "tech@madezmedia.co" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "google-generativeai>=0.8.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.0",
    "alembic>=1.12.0",
    "greenlet>=3.0.0",
    "aiohttp>=3.9.0",
    "mangum>=0.17.0",
    # GEO Pipeline dependencies
    "keybert>=0.8.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
geo = [
    "firecrawl-py>=0.0.1",
    "bertopic>=0.16.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
